Fix vertical scrollbar issue.

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -17,7 +17,7 @@ code {
 
 //Base Styles
 .full-height {
-  height: 100vh;
+  height: calc(100vh - 160px);
 }
 
 .right-border {
@@ -92,32 +92,24 @@ code {
 
 .sidebar {
   position: fixed;
-  top: 2.4rem;
+  top: 3.6rem;
   bottom: 0;
   left: 0;
-  padding: 1.6rem 0 0 0.6rem;
+  padding: 0.6rem 0 0 0;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 
-  &.active {
-      min-width: 80px;
-      max-width: 80px;
+  &.collaspe {
+      min-width: 8rem;
+      max-width: 8rem;
       text-align: center;
   }
-  
+
   .nav-link {
     font-weight: 500;
     color: #333;
 
     &.active {
       color: #007bff;
-    }
-
-    &.hover .feather {
-      color: inherit;
-    }
-    .feather {
-      margin-right: 0.4rem;
-      color: #999;
     }
 
     svg {
